tests/errors/semantic/blocking/UNANNOTATED_TYPE_ALIAS.py

MyType = int

def f(a : MyType):
    pass
